# stack_lang_interpreter

./: .gitignore  Cargo.toml  README.MD  a.out  crazy_ida.md  main.sl  test.sl  todo.md
.github/workflows/: rust.yml
examples/: christmas_tree.sl  fibonacci.sl  fibonnacci.sl  fizzbuzz.sl  range.sl
src/: main.rs
src/ast/: ast_test.rs  comments.rs  mod.rs  operand_extracts.rs  operation_extracts.rs  value_extracts.rs
src/ast/extract/: mod.rs  operation.rs  value.rs
src/runtime/: executors.rs  mod.rs  runtime_test.rs
src/runtime/executors/: math.rs  mod.rs
src/util/: cli.rs  error.rs  file.rs  mod.rs  parsing.rs  util_test.rs
