[package]
name = "stack_lang_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# handling numbers
num = "0.4.0"
# caching hashmaps
lazy_static = "1.4.0"
# cli parsing
clap = { version = "*", features = ["derive"] }
# compiling to binary format 
serde = "*"
postcard = { version = "*", features = ["alloc"] }
