[package]
name = "stack_lang_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# handling errors
thiserror = "1.0.38"
# handling numbers
num = "0.4.0"
# caching hashmaps
lazy_static = "1.4.0"
# cli parsing
clap = { version = "4.0.32", features = ["derive"] }
# compiling to binary format 
serde = "1.0.152"
postcard = { version = "1.0.2", features = ["alloc"] }
